Fix reflection on Firefox

--- a/public/sass/_header.scss
+++ b/public/sass/_header.scss
@@ -31,6 +31,7 @@ header {
       max-width: 100%;
     }
     div.reflection {
+      max-width: 100%;
       position: absolute;
       top: 100%;
       right: 0;
